<resources>
    <string name="app_name">MEarthWatch</string>
    <string name="title_activity_maps">Map</string>
    <string name="NoService">No services</string>
    <string name="hello">Hello</string>
    <string name="magnitude">magnitude</string>
    <string name="more_info">More info...</string>
    <string name="todo">TODO</string>
    <string name="show_list">Show List</string>
    <string name="more_information">More Information</string>
    <string name="surrounding_cities">Surrounding Cities</string>
    <string name="hello1">Hello</string>
    <string name="close">Close</string>
</resources>