<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <ImageView
                android:id="@+id/iconInfo"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:src="@android:drawable/ic_dialog_alert"
                android:contentDescription="@string/todo" />

            <TextView
                android:id="@+id/winTitle"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/iconInfo"
                android:layout_width="wrap_content"
                android:text="@string/hello"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/magnitude"
                android:layout_below="@id/winTitle"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/iconInfo"
                android:layout_width="wrap_content"
                android:text="@string/magnitude" />

            <Button
                android:background="@android:color/transparent"
                android:id="@+id/btn"
                android:layout_alignBottom="@id/magnitude"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_toEndOf="@id/magnitude"
                android:layout_width="wrap_content"
                android:text="@string/more_info"
                android:textColor="@color/common_google_signin_btn_text_dark" />


        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>






