<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:padding="25sp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/popTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="@string/more_information"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/popListTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/popTitle"
                    android:padding="8dp"
                    android:text="@string/surrounding_cities"
                    android:textSize="17sp" />

                <Button
                    android:id="@+id/desmissPopTop"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_alignBottom="@+id/popListTitle"
                    android:layout_alignParentEnd="true"
                    android:background="@android:drawable/ic_menu_close_clear_cancel" />

                <TextView
                    android:id="@+id/popList"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/popListTitle"
                    android:text="@string/hello"
                    android:textSize="15sp" />

                <WebView
                    android:id="@+id/htmlWebview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/popList" />

                <Button
                    android:id="@+id/dismissPop"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/htmlWebview"
                    android:layout_centerHorizontal="true"
                    android:background="@color/cardview_light_background"
                    android:text="@string/close"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />

            </RelativeLayout>
        </androidx.cardview.widget.CardView>
    </ScrollView>
</LinearLayout>